<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_screen1"
    tools:ignore="ContentDescription">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@mipmap/yindaoye1"
        app:layout_heightPercent="100%"
        app:layout_widthPercent="100%" />

    <TextView
        android:id="@+id/tv_content01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="10dp"
        android:gravity="center"
        android:text="@string/slide_1_title"
        android:textColor="@android:color/white"
        android:textSize="@dimen/slide_title"
        android:textStyle="bold"
        app:layout_heightPercent="15%"
        app:layout_marginBottomPercent="30%"
        app:layout_widthPercent="95%" />

    <TextView
        android:id="@+id/tv_content02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="10dp"
        android:gravity="center"


        android:text="@string/slide_1_title02"
        android:textColor="@android:color/white"
        android:textSize="@dimen/slide_title"
        app:layout_heightPercent="15%"
        app:layout_marginBottomPercent="25%"
        app:layout_widthPercent="95%" />

    <Button
        android:id="@+id/btn_skip_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"

        android:layout_marginLeft="10dp"
        android:background="@drawable/btn_shape"
        android:text="@string/log_in"
        android:textColor="@android:color/white"
        app:layout_marginBottomPercent="15%"

        />
</android.support.percent.PercentRelativeLayout>